redshift helper created

--- a/templates/index.html
+++ b/templates/index.html
@@ -162,76 +162,19 @@
                 Report 1
               </div>
               <div class="card-body">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>Heading</th>
-                      <th>Example</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>
-                        <p>
-                          <code class="highlighter-rouge">&lt;h1&gt;&lt;/h1&gt;</code>
-                        </p>
-                      </td>
-                      <td>
-                        <span class="h1">h1. Bootstrap heading</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <p>
-                          <code class="highlighter-rouge">&lt;h2&gt;&lt;/h2&gt;</code>
-                        </p>
-                      </td>
-                      <td>
-                        <span class="h2">h2. Bootstrap heading</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <p>
-                          <code class="highlighter-rouge">&lt;h3&gt;&lt;/h3&gt;</code>
-                        </p>
-                      </td>
-                      <td>
-                        <span class="h3">h3. Bootstrap heading</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <p>
-                          <code class="highlighter-rouge">&lt;h4&gt;&lt;/h4&gt;</code>
-                        </p>
-                      </td>
-                      <td>
-                        <span class="h4">h4. Bootstrap heading</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <p>
-                          <code class="highlighter-rouge">&lt;h5&gt;&lt;/h5&gt;</code>
-                        </p>
-                      </td>
-                      <td>
-                        <span class="h5">h5. Bootstrap heading</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <p>
-                          <code class="highlighter-rouge">&lt;h6&gt;&lt;/h6&gt;</code>
-                        </p>
-                      </td>
-                      <td>
-                        <span class="h6">h6. Bootstrap heading</span>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
+                <div class="form-group">
+                  <label for="usr">From Date:</label>
+                  <input type="date" class="form-control" id="from-date">
+                </div>
+                <div class="form-group">
+                  <label for="pwd">To Date:</label>
+                  <input type="date" class="form-control" id="to-date">
+                </div>
+                <div class="form-group">
+                  <button type="button" class="btn btn-danger">Submit</button>
+                </div>
+
+                
               </div>
             </div>
           </div>
@@ -534,11 +477,10 @@
       </div>
     </footer>
     <!-- Bootstrap and necessary plugins-->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="node_modules/pace-progress/pace.min.js"></script>
-    <script src="node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js"></script>
-    <script src="node_modules/@coreui/coreui/dist/js/coreui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+      
+      </script>
   </body>
 </html>
