--- a/templates/index.html
+++ b/templates/index.html
@@ -468,12 +468,12 @@
     </div>
     <footer class="app-footer">
       <div>
-        <a href="https://coreui.io">CoreUI</a>
-        <span>&copy; 2018 creativeLabs.</span>
+        <a href=""></a>
+        <span></span>
       </div>
       <div class="ml-auto">
         <span>Powered by</span>
-        <a href="https://coreui.io">CoreUI</a>
+        <a href="">Caffeinecodes.com</a>
       </div>
     </footer>
     <!-- Bootstrap and necessary plugins-->
